chapter07/nodeport-whoami.yaml
# ~/nodeport-whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-whoami
spec:
  type: NodePort
  selector:
    app: whoami
  ports:
  - nodePort: 30001 #Puerto del Host/Nodo por donde el servicio NodePort sera accesible
    port: 80 #Puerto del servicio en este caso NodePort
    targetPort: 80 #Puerto de los Pods Objetivos
